--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -49,7 +49,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/save_btn"
                 android:elevation="2dp"
-                android:onClick="@{() -> drawViewModel.onSaveButtonClicked()}"
+                android:onClick="@{() -> drawViewModel.onSaveClicked()}"
                 android:translationZ="2dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
