--- a/app/src/main/res/layout/fragment_enter_text.xml
+++ b/app/src/main/res/layout/fragment_enter_text.xml
@@ -6,17 +6,13 @@
     <data>
 
         <variable
-            name="eventViewModel"
-            type="be.hogent.faith.faith.emotionCapture.enterEventDetails.EventViewModel" />
-
-        <variable
-            name="enterTextViewModel"
-            type="be.hogent.faith.faith.details.text.create.EnterTextViewModel" />
+            name="textDetailViewModel"
+            type="be.hogent.faith.faith.details.text.create.TextDetailViewModel" />
 
         <import type="android.graphics.Color" />
-        <import type="be.hogent.faith.faith.details.text.create.EnterTextViewModel.FontSize"/>
+        <import type="be.hogent.faith.faith.details.text.create.TextDetailViewModel.FontSize"/>
 
-        <import type="be.hogent.faith.faith.details.text.create.EnterTextViewModel" />
+        <import type="be.hogent.faith.faith.details.text.create.TextDetailViewModel" />
 
     </data>
 
@@ -43,7 +39,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/save_btn"
                 android:elevation="2dp"
-                android:onClick="@{() -> eventViewModel.saveText(enterTextViewModel.text, enterTextViewModel.existingDetail)}"
+                android:onClick="@{() -> textDetailViewModel.onSaveClicked()}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,10 +72,10 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.boldClicked)? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(textDetailViewModel.boldClicked)? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_bold"
                         android:gravity="center_horizontal"
-                        android:onClick="@{() -> enterTextViewModel.onBoldClicked()}"
+                        android:onClick="@{() -> textDetailViewModel.onBoldClicked()}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/bold"
@@ -94,10 +90,10 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.italicClicked)? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(textDetailViewModel.italicClicked)? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_italic"
                         android:gravity="center_horizontal"
-                        android:onClick="@{() -> enterTextViewModel.onItalicClicked()}"
+                        android:onClick="@{() -> textDetailViewModel.onItalicClicked()}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/italic"
@@ -112,10 +108,10 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.underlineClicked)? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(textDetailViewModel.underlineClicked)? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_underline"
                         android:gravity="center_horizontal"
-                        android:onClick="@{() -> enterTextViewModel.onUnderlineClicked()}"
+                        android:onClick="@{() -> textDetailViewModel.onUnderlineClicked()}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/underline"
@@ -153,9 +149,9 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{enterTextViewModel.selectedFontSize==FontSize.SMALL? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{textDetailViewModel.selectedFontSize==FontSize.SMALL? @drawable/background : @drawable/background_noborder}"
                         android:gravity="bottom|center_horizontal"
-                        android:onClick="@{() -> enterTextViewModel.pickFontSize(FontSize.SMALL)}"
+                        android:onClick="@{() -> textDetailViewModel.pickFontSize(FontSize.SMALL)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/font_sizesmall"
@@ -169,9 +165,9 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{enterTextViewModel.selectedFontSize==FontSize.NORMAL?@drawable/background : @drawable/background_noborder}"
+                        android:background="@{textDetailViewModel.selectedFontSize==FontSize.NORMAL?@drawable/background : @drawable/background_noborder}"
                         android:gravity="bottom|center_horizontal"
-                        android:onClick="@{() -> enterTextViewModel.pickFontSize(FontSize.NORMAL)}"
+                        android:onClick="@{() -> textDetailViewModel.pickFontSize(FontSize.NORMAL)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
 
@@ -186,9 +182,9 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{enterTextViewModel.selectedFontSize==FontSize.LARGE? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{textDetailViewModel.selectedFontSize==FontSize.LARGE? @drawable/background : @drawable/background_noborder}"
                         android:gravity="center_horizontal"
-                        android:onClick="@{() -> enterTextViewModel.pickFontSize(FontSize.LARGE)}"
+                        android:onClick="@{() -> textDetailViewModel.pickFontSize(FontSize.LARGE)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/font_sizelarge"
@@ -225,9 +221,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.BLUE ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(textDetailViewModel.selectedTextColor)==Color.BLUE ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_blue"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.BLUE)}"
+                        android:onClick="@{() -> textDetailViewModel.pickTextColor(Color.BLUE)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_blue" />
@@ -238,9 +234,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.RED ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(textDetailViewModel.selectedTextColor)==Color.RED ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_red"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.RED)}"
+                        android:onClick="@{() -> textDetailViewModel.pickTextColor(Color.RED)}"
 
                         android:padding="5dp"
                         android:scaleType="centerInside"
@@ -252,9 +248,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.YELLOW ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(textDetailViewModel.selectedTextColor)==Color.YELLOW ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_yellow"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.YELLOW)}"
+                        android:onClick="@{() -> textDetailViewModel.pickTextColor(Color.YELLOW)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_yellow" />
@@ -265,9 +261,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{enterTextViewModel.selectedTextColor==Color.GREEN ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{textDetailViewModel.selectedTextColor==Color.GREEN ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_green"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.GREEN)}"
+                        android:onClick="@{() -> textDetailViewModel.pickTextColor(Color.GREEN)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_green" />
@@ -278,9 +274,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.BLACK ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(textDetailViewModel.selectedTextColor)==Color.BLACK ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_black"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.BLACK)}"
+                        android:onClick="@{() -> textDetailViewModel.pickTextColor(Color.BLACK)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_black" />
