--- a/app/src/main/res/layout/fragment_take_photo.xml
+++ b/app/src/main/res/layout/fragment_take_photo.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="photoViewModel"
-            type="be.hogent.faith.faith.emotionCapture.takePhoto.TakePhotoViewModel" />
+            type="be.hogent.faith.faith.details.photo.create.TakePhotoViewModel" />
         <variable
             name="userViewModel"
             type="be.hogent.faith.faith.UserViewModel" />
