--- a/app/src/main/res/layout/fragment_view_event.xml
+++ b/app/src/main/res/layout/fragment_view_event.xml
@@ -7,7 +7,7 @@
 
         <variable
                 name="photoViewModel"
-                type="be.hogent.faith.faith.emotionCapture.takePhoto.TakePhotoViewModel"/>
+                type="be.hogent.faith.faith.details.photo.create.TakePhotoViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
