refactor: move audio feature to detail package

--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="audioViewModel"
-            type="be.hogent.faith.faith.emotionCapture.recordAudio.AudioViewModel" />
+            type="be.hogent.faith.faith.details.audio.create.AudioViewModel" />
 
         <variable
             name="eventViewModel"
