test: update app module tests after refactor
Only made sure they pass but require additional tests for new
functionality.

--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="audioViewModel"
-            type="be.hogent.faith.faith.details.audio.create.AudioViewModel" />
+            type="be.hogent.faith.faith.details.audio.AudioViewModel" />
     </data>
 
     <FrameLayout
