--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -8,8 +8,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="audioViewModel"
-            type="be.hogent.faith.faith.details.audio.AudioViewModel" />
+            name="audioDetailViewModel"
+            type="be.hogent.faith.faith.details.audio.AudioDetailViewModel" />
     </data>
 
     <FrameLayout
@@ -35,8 +35,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/save_btn"
-                android:onClick="@{() -> audioViewModel.onSaveClicked()}"
-                android:visibility="@{audioViewModel.saveButtonVisible? View.VISIBLE : View.GONE}"
+                android:onClick="@{() -> audioDetailViewModel.onSaveClicked()}"
+                android:visibility="@{audioDetailViewModel.saveButtonVisible? View.VISIBLE : View.GONE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,8 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:background="@drawable/audio_play"
-                android:enabled="@{audioViewModel.playButtonEnabled}"
-                android:onClick="@{() -> audioViewModel.onPlayButtonClicked()}"
+                android:enabled="@{audioDetailViewModel.playButtonEnabled}"
+                android:onClick="@{() -> audioDetailViewModel.onPlayButtonClicked()}"
                 android:padding="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/guide_recordAudio_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/btn_recordAudio_pause"
@@ -61,8 +61,8 @@
                 android:adjustViewBounds="true"
                 android:background="@drawable/audio_pause"
                 android:contentDescription="@string/description_pause_recording"
-                android:enabled="@{audioViewModel.pauseButtonEnabled}"
-                android:onClick="@{() -> audioViewModel.onPauseButtonClicked()}"
+                android:enabled="@{audioDetailViewModel.pauseButtonEnabled}"
+                android:onClick="@{() -> audioDetailViewModel.onPauseButtonClicked()}"
                 android:padding="8dp"
                 android:scaleType="centerInside"
                 app:layout_constraintBottom_toTopOf="@+id/guide_recordAudio_bottom"
@@ -78,8 +78,8 @@
                 android:adjustViewBounds="true"
                 android:background="@drawable/audio_record"
                 android:contentDescription="@string/description_start_recording"
-                android:enabled="@{audioViewModel.recordButtonEnabled}"
-                android:onClick="@{() -> audioViewModel.onRecordButtonClicked()}"
+                android:enabled="@{audioDetailViewModel.recordButtonEnabled}"
+                android:onClick="@{() -> audioDetailViewModel.onRecordButtonClicked()}"
                 android:padding="8dp"
                 android:scaleType="centerInside"
                 app:layout_constraintBottom_toTopOf="@+id/guide_recordAudio_bottom"
@@ -95,8 +95,8 @@
                 android:adjustViewBounds="true"
                 android:background="@drawable/audio_stop"
                 android:contentDescription="@string/description_stop_recording"
-                android:enabled="@{audioViewModel.stopButtonEnabled}"
-                android:onClick="@{() -> audioViewModel.onStopButtonClicked()}"
+                android:enabled="@{audioDetailViewModel.stopButtonEnabled}"
+                android:onClick="@{() -> audioDetailViewModel.onStopButtonClicked()}"
                 android:padding="8dp"
                 android:scaleType="centerInside"
                 app:layout_constraintBottom_toTopOf="@+id/guide_recordAudio_bottom"
@@ -138,10 +138,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="@{String.valueOf(audioViewModel.recordingTimeString)}"
+                android:text="@{String.valueOf(audioDetailViewModel.recordingTimeString)}"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:visibility="@{audioViewModel.recordingTimeVisibility}"
+                android:visibility="@{audioDetailViewModel.recordingTimeVisibility}"
                 app:layout_constraintEnd_toEndOf="@+id/btn_recordAudio_record"
                 app:layout_constraintStart_toStartOf="@+id/btn_recordAudio_pause"
                 app:layout_constraintTop_toTopOf="@+id/guide_recordAudio_bottom"
