--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -108,14 +108,13 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
                         android:hint="@string/save_event_title"
+                        app:errorResId='@{userViewModel.titleErrorMessage}'
                         app:layout_constraintBottom_toTopOf="@+id/textInputLayout_date"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_weight="1"
-                        app:errorResId='@{userViewModel.titleErrorMessage}'
-                        >
+                        app:layout_constraintVertical_weight="1">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/txt_save_event_title"
@@ -197,6 +196,13 @@
                 app:layout_constraintGuide_percent="0.89" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
     </FrameLayout>
 
 </layout>
