--- a/app/src/main/res/layout/view_login_circle.xml
+++ b/app/src/main/res/layout/view_login_circle.xml
@@ -29,6 +29,7 @@
                 android:id="@+id/txt_welcome_userName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
                 android:drawableStart="@drawable/ic_login_wrap"
                 android:text="@={welcomeViewModel.userName}" />
         </com.google.android.material.textfield.TextInputLayout>
