--- a/app/src/main/res/layout/item_event_detail_thumbnail.xml
+++ b/app/src/main/res/layout/item_event_detail_thumbnail.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/img_event_detail_thumbnail"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/description_thumbnail">
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/img_event_detail_thumbnail"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:layout_margin="8dp"
+    android:background="@drawable/rv_item_detail_background"
+    android:contentDescription="@string/description_thumbnail"
+    android:padding="@dimen/material_drawer_item_profile_icon_padding_right"
+    tools:srcCompat="@drawable/ic_micro">
 
 </ImageView>
