--- a/app/src/main/res/layout/panel_text_tools.xml
+++ b/app/src/main/res/layout/panel_text_tools.xml
@@ -20,58 +20,62 @@
         app:cardCornerRadius="@dimen/panel_corner_radius">
 
         <LinearLayout
-            android:id="@+id/linearLayoutPencils"
+            android:id="@+id/linearLayoutText"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/btn_draw_setThinLineWidth"
+            <TextView
+                android:id="@+id/btn_draw_setFontSmall"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_margin="8dp"
+                android:layout_gravity="bottom|center_horizontal"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:background="@{drawViewModel.selectedLineWidth==LineWidth.THIN ? @drawable/background : @drawable/background_noborder }"
                 android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.THIN)}"
+                android:textColor="@{drawViewModel.selectedColor}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_brush_thinline"
-                android:tint="@{drawViewModel.selectedColor}" />
+                android:text="@string/textSize_a"
+                android:textSize="25sp" />
 
 
-            <ImageView
-                android:id="@+id/btn_draw_setMediumLineWidth"
+            <TextView
+                android:id="@+id/btn_draw_setFontMedium"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_margin="8dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:background="@{drawViewModel.selectedLineWidth==LineWidth.MEDIUM ? @drawable/background : @drawable/background_noborder }"
                 android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.MEDIUM)}"
+                android:textColor="@{drawViewModel.selectedColor}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_brush_mediumline"
-                android:tint="@{drawViewModel.selectedColor}" />
+                android:text="@string/textSize_a"
+                android:textSize="35sp" />
 
-            <ImageView
-                android:id="@+id/btn_draw_setThickLineWidth"
+            <TextView
+                android:id="@+id/btn_draw_setFontLarge"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_gravity="bottom|center_horizontal"
                 android:layout_weight="1"
-                android:layout_margin="8dp"
                 android:adjustViewBounds="true"
-                android:background="@{drawViewModel.selectedLineWidth==LineWidth.THICK ? @drawable/background: @drawable/background_noborder}"
+                android:background="@{drawViewModel.selectedLineWidth==LineWidth.THICK ? @drawable/background : @drawable/background_noborder }"
                 android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.THICK)}"
+                android:textColor="@{drawViewModel.selectedColor}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_brush_thickline"
-                android:tint="@{drawViewModel.selectedColor}" />
+                android:text="@string/textSize_a"
+                android:textSize="45sp" />
+
 
             <ImageView
-                android:id="@+id/btn_draw_undo"
+                android:id="@+id/btn_draw_Fontundo"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
