--- a/app/src/main/res/layout/fragment_draw_avatar.xml
+++ b/app/src/main/res/layout/fragment_draw_avatar.xml
@@ -30,7 +30,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintBottom_toTopOf="@id/container_draw_utilities"
+                app:layout_constraintBottom_toTopOf="@id/container_tools"
                 app:layout_constraintEnd_toEndOf="@+id/guide_drawView_drawTools_left"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,9 +49,37 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/guide_drawView_drawTools_left"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/container_draw_colors"
+                app:layout_constraintTop_toBottomOf="@id/container_tools"
                 app:layout_constraintVertical_weight="0.25"
                 bind:drawViewModel="@{drawViewModel}" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/container_tools"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:cardCornerRadius="@dimen/panel_corner_radius"
+                app:layout_constraintBottom_toTopOf="@+id/container_draw_utilities"
+                app:layout_constraintEnd_toStartOf="@+id/guide_drawView_drawTools_left"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/container_draw_colors">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_vertical">
+
+                     <Button
+                        android:id="@+id/btn_draw_restart"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:onClick="@{()->drawViewModel.onRestartClicked()}"
+                        android:text="@string/opnieuw" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
