Add pwd toggle and cancel button to login and register screen

--- a/app/src/main/res/layout/view_register_frame.xml
+++ b/app/src/main/res/layout/view_register_frame.xml
@@ -24,12 +24,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="@string/hint_choose_username"
+            app:endIconMode="clear_text"
+            app:errorEnabled="true"
+            app:errorResId="@{registerUserInfoViewModel.userNameErrorMessage}"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toTopOf="parent"
-            app:errorResId="@{registerUserInfoViewModel.userNameErrorMessage}"
-            app:errorEnabled="true"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -38,8 +38,7 @@
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_login_wrap"
                 android:inputType="textPersonName"
-                android:text="@={registerUserInfoViewModel.userName}"
-                 />
+                android:text="@={registerUserInfoViewModel.userName}" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -49,8 +48,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/kies_een_wachtwoord"
-            app:errorResId="@{registerUserInfoViewModel.passwordErrorMessage}"
+            app:endIconMode="password_toggle"
             app:errorEnabled="true"
+            app:errorResId="@{registerUserInfoViewModel.passwordErrorMessage}"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout_register_pwd_repeat"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.5"
@@ -75,9 +75,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:hint="@string/herhaal_je_wachtwoord"
-            app:errorResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}"
+            app:endIconMode="password_toggle"
             app:errorEnabled="true"
 
+            app:errorResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -88,8 +89,8 @@
                 android:id="@+id/txt_register_password_repeat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
                 android:drawableStart="@drawable/ic_lock_wrap"
+                android:inputType="textPassword"
                 android:text="@={registerUserInfoViewModel.passwordRepeated}" />
 
         </com.google.android.material.textfield.TextInputLayout>
