--- a/app/src/main/res/layout/view_login_circle.xml
+++ b/app/src/main/res/layout/view_login_circle.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
         <variable
@@ -20,7 +21,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:hint="@string/username">
+            android:hint="@string/username"
+            app:endIconMode="clear_text">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txt_welcome_userName"
@@ -36,7 +38,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:hint="@string/password">
+            android:hint="@string/password"
+            app:endIconMode="password_toggle">
 
 
             <com.google.android.material.textfield.TextInputEditText
