--- a/app/src/main/res/layout/panel_text_tools.xml
+++ b/app/src/main/res/layout/panel_text_tools.xml
@@ -41,7 +41,7 @@
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:text="@string/textSize_a"
-                android:textSize="25sp" />
+                android:textSize="@dimen/textIcon_fontsize_small" />
 
 
             <TextView
@@ -57,7 +57,7 @@
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:text="@string/textSize_a"
-                android:textSize="35sp" />
+                android:textSize="@dimen/textIcon_fontsize_medium" />
 
             <TextView
                 android:id="@+id/btn_draw_setFontLarge"
@@ -72,7 +72,7 @@
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:text="@string/textSize_a"
-                android:textSize="45sp" />
+                android:textSize="@dimen/textIcon_fontsize_large" />
 
 
             <ImageView
