--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="onSurface">#000000</color>
     <color name="onError">#FFFFFF</color>
     <color name="background_register_info_color">#A7FFEB</color>
+    <color name="background_record_audio">#91C6A8</color>
 
     <color name="blue">#00FFFF</color>
     <color name="red">#DA1D45</color>
