--- a/app/src/main/res/layout/view_login_circle.xml
+++ b/app/src/main/res/layout/view_login_circle.xml
@@ -9,47 +9,56 @@
     </data>
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:background="@drawable/cirkel_paneel"
+        android:layout_width="380dp"
+        android:layout_height="330dp"
+        android:background="@drawable/login_rectangle"
         android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView_username"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="@string/username"
+            android:textAppearance="@style/TextAppearance.caption"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout_username"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            style="@style/login_textInputLayout"
             android:hint="@string/username"
             app:endIconMode="clear_text"
-            app:errorResId="@{welcomeViewModel.userNameErrorMessage}"
-            app:errorEnabled="true">
+            app:errorEnabled="true"
+            app:errorResId="@{welcomeViewModel.userNameErrorMessage}">
 
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txt_welcome_userName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
                 android:drawableStart="@drawable/ic_login_wrap"
                 android:imeOptions="flagNoExtractUi"
+                android:inputType="text"
                 android:nextFocusRight="@+id/txt_welcome_password"
                 android:nextFocusDown="@+id/txt_welcome_password"
                 android:singleLine="true"
                 android:text="@={welcomeViewModel.userName}" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/textView_password"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="@string/password"
+            android:textAppearance="@style/TextAppearance.caption"
+            android:layout_marginTop="10dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout_pwd"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            style="@style/login_textInputLayout"
             android:hint="@string/password"
             app:endIconMode="password_toggle"
-            app:errorResId="@{welcomeViewModel.passwordErrorMessage}"
-            app:errorEnabled="true">
+            app:errorEnabled="true"
+            app:errorResId="@{welcomeViewModel.passwordErrorMessage}">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txt_welcome_password"
@@ -63,5 +72,18 @@
                 android:text="@={welcomeViewModel.password}" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/material_icon_button"
+            style="@style/login_button"
+            android:text="@string/naar_de_stad"
+            app:icon="@drawable/icoon_stad"
+            android:gravity="center"
+            app:iconGravity="textStart"
+            android:layout_marginTop="10dp"
+            android:onClick="@{() -> welcomeViewModel.loginButtonClicked()}"/>
+
     </LinearLayout>
+
+
+
 </layout>
