--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,8 +14,8 @@
         <item name="colorOnSurface">@color/onSurface</item>
         <item name="android:colorBackground">@color/background</item>
         <item name="colorOnBackground">@color/onBackground</item>
-        <item name="android:fontFamily">@font/source_sans_pro</item>
-        <item name="fontFamily">@font/source_sans_pro</item>
+        <item name="android:fontFamily">@font/sourcesanspro</item>
+        <item name="fontFamily">@font/sourcesanspro</item>
 
     </style>
 
@@ -36,10 +36,39 @@
 
     <style name="AppTheme.PopupOverlay" parent="Theme.MaterialComponents.Light" />
 
+    <!--TODO terug aanpassen naar 25sp, maar anders staat het op alle pijlen fout-->
     <style name="TextAppearance.NavigationButton" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textSize">25sp</item>
-        <item name="android:fontFamily">@font/source_sans_pro_semibold</item>
+        <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="TextAppearance.NavigationButtonSmall" parent="TextAppearance.NavigationButton">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="login_textInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="boxCornerRadiusTopEnd">30dp</item>
+        <item name="boxCornerRadiusTopStart">30dp</item>
+        <item name="boxCornerRadiusBottomEnd">30dp</item>
+        <item name="boxCornerRadiusBottomStart">30dp</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+    </style>
+
+    <style name="login_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">69dp</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:elevation">2dp</item>
+        <item name="android:textAppearance">@style/TextAppearance.NavigationButton</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/color_white</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="iconTint">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="iconGravity">textStart</item>
     </style>
 
     <style name="arrow_style.toLeft" parent="Widget.MaterialComponents.Button.Icon">
@@ -81,6 +110,99 @@
         <item name="cornerFamilyBottomLeft">cut</item>
         <item name="cornerSizeTopRight">0dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
+    </style>
+
+    <style name="TextAppearance.H1" parent="TextAppearance.MaterialComponents.Headline1">
+        <item name="fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:textSize">96sp</item>
+        <item name="android:letterSpacing">-1.5</item>
+    </style>
+
+    <style name="TextAppearance.H2" parent="TextAppearance.MaterialComponents.Headline2">
+        <item name="fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:textSize">60sp</item>
+        <item name="android:letterSpacing">-0.5</item>
+    </style>
+
+    <style name="TextAppearance.H3" parent="TextAppearance.MaterialComponents.Headline3">
+        <item name="fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:textSize">45sp</item>
+        <item name="android:letterSpacing">0</item>
+    </style>
+
+    <style name="TextAppearance.H4" parent="TextAppearance.MaterialComponents.Headline4">
+        <item name="fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:fontFamily">@font/sourcesanspro_light</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:letterSpacing">0.25</item>
+    </style>
+
+    <style name="TextAppearance.H5" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="fontFamily">@font/sourcesanspro</item>
+        <item name="android:fontFamily">@font/sourcesanspro</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:letterSpacing">0</item>
+    </style>
+
+    <style name="TextAppearance.H6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="fontFamily">@font/sourcesanspro</item>
+        <item name="android:fontFamily">@font/sourcesanspro</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:letterSpacing">0.15</item>
+    </style>
+
+    <style name="TextAppearance.subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="fontFamily">@font/sourcesanspro</item>
+        <item name="android:fontFamily">@font/sourcesanspro</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">0.15</item>
+    </style>
+
+    <style name="TextAppearance.subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="fontFamily">@font/sourcesanspro_semibold</item>
+        <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.1</item>
+    </style>
+
+    <style name="TextAppearance.body1" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="fontFamily">@font/sourcesanspro</item>
+        <item name="android:fontFamily">@font/sourcesanspro</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">0.5</item>
+    </style>
+
+    <style name="TextAppearance.body2" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="fontFamily">@font/sourcesanspro</item>
+        <item name="android:fontFamily">@font/sourcesanspro</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.25</item>
+    </style>
+
+    <style name="TextAppearance.Button" parent="TextAppearance.MaterialComponents.Button">
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/sourcesanspro_semibold</item>
+        <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:letterSpacing">1.15</item>
+    </style>
+
+    <style name="TextAppearance.caption" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="fontFamily">@font/sourcesanspro_semibold</item>
+        <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/caption</item>
+    </style>
+
+    <style name="TextAppearance.overline" parent="TextAppearance.MaterialComponents.Overline">
+        <item name="fontFamily">@font/sourcesanspro</item>
+        <item name="android:fontFamily">@font/sourcesanspro</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:letterSpacing">1.5</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
 
