--- a/app/src/main/res/layout/view_login_circle.xml
+++ b/app/src/main/res/layout/view_login_circle.xml
@@ -8,10 +8,15 @@
             type="be.hogent.faith.faith.loginOrRegister.WelcomeViewModel" />
     </data>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="380dp"
         android:layout_height="330dp"
-        android:background="@drawable/login_rectangle"
+        app:cardCornerRadius="30dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="30dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -72,6 +77,6 @@
 
     </LinearLayout>
 
-
+    </androidx.cardview.widget.CardView>
 
 </layout>
