--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,20 +36,20 @@
 
     <style name="AppTheme.PopupOverlay" parent="Theme.MaterialComponents.Light" />
 
-    <style name="TextAppearance.NavigationButton" parent="TextAppearance.MaterialComponents.Button">
+    <style name="AppTheme.NavigationButton" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textSize">25sp</item>
         <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0</item>
     </style>
 
-    <style name="TextAppearance.NavigationButtonSmall" parent="TextAppearance.NavigationButton">
+    <style name="TextAppearance.NavigationButtonSmall" parent="AppTheme.NavigationButton">
         <item name="android:textSize">15sp</item>
     </style>
 
     <style name="login_textInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">300dp</item>
-        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="boxCornerRadiusTopEnd">30dp</item>
         <item name="boxCornerRadiusTopStart">30dp</item>
         <item name="boxCornerRadiusBottomEnd">30dp</item>
@@ -57,6 +57,7 @@
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="boxStrokeColor">@color/caption</item>
         <item name="hintTextColor">@color/caption</item>
+
     </style>
 
     <style name="login_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
@@ -64,7 +65,7 @@
         <item name="android:layout_height">69dp</item>
         <item name="cornerRadius">40dp</item>
         <item name="android:elevation">2dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.NavigationButton</item>
+        <item name="android:textAppearance">@style/AppTheme.NavigationButton</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/color_white</item>
         <item name="android:paddingLeft">24dp</item>
@@ -77,7 +78,7 @@
         <item name="android:layout_width">170dp</item>
         <item name="android:layout_height">@dimen/arrow_height</item>
         <item name="android:textColor">@color/color_black</item>
-        <item name="android:textAppearance">@style/TextAppearance.NavigationButton</item>
+        <item name="android:textAppearance">@style/AppTheme.NavigationButton</item>
         <item name="android:backgroundTint">@color/color_white</item>
         <item name="iconTint">@null</item>
         <item name="iconGravity">end</item>
@@ -114,43 +115,43 @@
         <item name="cornerSizeBottomRight">0dp</item>
     </style>
 
-    <style name="TextAppearance.H1" parent="TextAppearance.MaterialComponents.Headline1">
+    <style name="AppTheme.H1" parent="TextAppearance.MaterialComponents.Headline1">
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">96sp</item>
     </style>
 
-    <style name="TextAppearance.H2" parent="TextAppearance.MaterialComponents.Headline2">
+    <style name="AppTheme.H2" parent="TextAppearance.MaterialComponents.Headline2">
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">60sp</item>
     </style>
 
-    <style name="TextAppearance.H3" parent="TextAppearance.MaterialComponents.Headline3">
+    <style name="AppTheme.H3" parent="TextAppearance.MaterialComponents.Headline3">
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">45sp</item>
     </style>
 
-    <style name="TextAppearance.H4" parent="TextAppearance.MaterialComponents.Headline4">
+    <style name="AppTheme.H4" parent="TextAppearance.MaterialComponents.Headline4">
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">34sp</item>
     </style>
 
-    <style name="TextAppearance.H5" parent="TextAppearance.MaterialComponents.Headline5">
+    <style name="AppTheme.H5" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="fontFamily">@font/sourcesanspro</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="android:textSize">24sp</item>
     </style>
 
-    <style name="TextAppearance.H6" parent="TextAppearance.MaterialComponents.Headline6">
+    <style name="AppTheme.H6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="fontFamily">@font/sourcesanspro</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="TextAppearance.subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
+    <style name="AppTheme.subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="fontFamily">@font/sourcesanspro</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="android:textSize">16sp</item>
@@ -184,19 +185,25 @@
         <item name="android:letterSpacing">1.15</item>
     </style>
 
-    <style name="TextAppearance.caption" parent="TextAppearance.MaterialComponents.Caption">
+    <style name="AppTheme.caption" parent="TextAppearance.MaterialComponents.Caption">
         <item name="fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/caption</item>
     </style>
 
-    <style name="TextAppearance.overline" parent="TextAppearance.MaterialComponents.Overline">
+    <style name="AppTheme.overline" parent="TextAppearance.MaterialComponents.Overline">
         <item name="fontFamily">@font/sourcesanspro</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="android:textSize">10sp</item>
         <item name="android:letterSpacing">1.5</item>
         <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="AppTheme.Error" parent="TextAppearance.Design.Error">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:colorActivatedHighlight">@color/red</item>
+        <item name="android:colorControlActivated">@color/red</item>
     </style>
 
 
